--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,16 @@
 {
+  "headers": [
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        }
+      ]
+    }
+  ],
+  
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
