--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@stripe/stripe-js": "^3.0.7",
     "@supabase/supabase-js": "^2.49.3",
+    "@types/sitemap-generator": "^8.5.5",
     "clsx": "^2.1.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.6.1",
     "lucide-react": "^0.344.0",
     "next-sitemap": "^4.2.3",
@@ -24,11 +26,13 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.2",
+    "sitemap": "^8.0.0",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/express": "^5.0.1",
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
@@ -38,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "ngx-sitemap": "^1.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
