--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,11 @@
   from = "/*/sitemap_index.xml"
   to = "/sitemap_index.xml"
   status = 200
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
+    Referrer-Policy = "no-referrer-when-downgrade"
+    Content-Security-Policy = "default-src 'self'"
