--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@googleapis/adsense": "^10.3.0",
+    "@netlify/plugin-nextjs": "^5.10.7",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tabs": "^1.0.4",
     "@stripe/stripe-js": "^3.0.7",
