Add useNutritionData hook for nutrition API integrationnnnmnnnnnnnnnnnnnnnnnnn

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build": "[my-framework] build --output public"
   },
   "dependencies": {
     "@googleapis/adsense": "^10.3.0",
